--- a/index.html
+++ b/index.html
@@ -4,8 +4,6 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Product Manager Dashboard</title>
-<link rel="manifest" href="manifest.json">
-<meta name="theme-color" content="#ffcc00">
   <style>
     html, body { margin:0; font-family: Arial, sans-serif; background:#fff; color:#111; min-height:100%; }
     header { background:#fff; padding:.5rem 1rem; display:flex; justify-content:space-between; align-items:center;
@@ -109,7 +107,6 @@
         <input type="text" id="name" placeholder="Product Name" required />
         <input type="number" id="buyPrice" placeholder="Buy Price" step="0.01" min="0" required />
         <input type="number" id="sellPrice" placeholder="Sell Price" step="0.01" min="0" required />
-<input type="number" id="bulkPrice" placeholder="Bulk Price (for multiple items)" step="0.01" min="0" />
         <input type="number" id="stock" placeholder="Stock Quantity" step="1" min="0" required />
         <input type="file" id="image" accept="image/*" style="display:none" />
         <label for="image" class="file-btn">📷 Add Photo</label>
@@ -150,7 +147,6 @@
         <input type="hidden" id="saleId" />
         <div>
           <input type="number" id="saleQty" step="1" required />
-<p id="totalPrice" style="margin:.4rem 0;font-weight:bold;"></p>
         </div>
         <div style="display:flex; gap:.5rem; margin-top:.5rem;">
           <button type="submit" class="action-btn sale-btn">Confirm</button>
@@ -188,13 +184,7 @@
       tx.oncomplete=()=>renderProducts();
     }
 
-    
-function getUnitPrice(product, qty){
-  if(qty > 1 && product.bulkPrice){ return product.bulkPrice; }
-  return product.sellPrice;
-}
-
-function renderProducts(filter=""){
+    function renderProducts(filter=""){
       const tx=db.transaction("products","readonly");
       const store=tx.objectStore("products");
       const req=store.getAll();
@@ -239,12 +229,11 @@ function renderProducts(filter=""){
       const buyPrice=parseFloat(document.getElementById("buyPrice").value)||0;
       const sellPrice=parseFloat(document.getElementById("sellPrice").value)||0;
       const stock=parseInt(document.getElementById("stock").value)||0;
-      const bulkPrice=parseFloat(document.getElementById("bulkPrice").value)||null;
       const file=document.getElementById("image").files[0];
       if(!file){alert("Image required");return;}
       const reader=new FileReader();
       reader.onload=()=>{
-        const product={name,buyPrice,sellPrice,bulkPrice,stock,image:reader.result};
+        const product={name,buyPrice,sellPrice,stock,image:reader.result};
         saveProduct(product);
         closeModal();
       };
@@ -292,21 +281,7 @@ function renderProducts(filter=""){
       if(confirm("Delete this product?")){deleteProduct(id);closeEditModal();}
     }
 
-    
-document.getElementById("saleQty").addEventListener("input",()=>{
-  const qty=parseInt(saleQty.value);
-  const id=Number(document.getElementById("saleId").value);
-  if(!qty||qty<=0)return;
-  const tx=db.transaction("products","readonly");
-  tx.objectStore("products").get(id).onsuccess=e=>{
-    const p=e.target.result;
-    const unit=getUnitPrice(p,qty);
-    document.getElementById("totalPrice").innerText="Total: $"+(unit*qty).toFixed(2);
-  };
-});
-
-
-document.getElementById("saleForm").addEventListener("submit",e=>{
+    document.getElementById("saleForm").addEventListener("submit",e=>{
       e.preventDefault();
       const id=Number(document.getElementById("saleId").value);
       const qty=parseInt(document.getElementById("saleQty").value);
@@ -357,9 +332,6 @@ document.getElementById("saleForm").addEventListener("submit",e=>{
     hamburger.addEventListener("click",e=>{e.stopPropagation();sidebar.classList.toggle("active");});
     window.addEventListener("click",e=>{if(!sidebar.contains(e.target)&&!hamburger.contains(e.target))sidebar.classList.remove("active");});
     document.getElementById("addBtn").addEventListener("click",()=>openModal());
-  if ('serviceWorker' in navigator) {
-  navigator.serviceWorker.register('service-worker.js');
-}
-</script>
+  </script>
 </body>
 </html>
