--- a/index.html
+++ b/index.html
@@ -13,26 +13,53 @@ header{background:#fff;padding:.6rem 1rem;display:flex;justify-content:space-bet
 
 main{padding:1rem}
 
-#productList{display:grid;grid-template-columns:repeat(3,1fr);gap:.7rem}
-
+#productList{display:grid;grid-template-columns:repeat(2,1fr);gap:.8rem}
 
 .product{background:#fff;border-radius:12px;overflow:hidden;box-shadow:0 2px 6px rgba(0,0,0,0.08);cursor:pointer;transition:.2s}
 .product:hover{transform:translateY(-3px);box-shadow:0 6px 14px rgba(0,0,0,0.15)}
-.product img{width:100%;height:150px;object-fit:cover;display:block}
-.product-info{display:flex;justify-content:space-between;padding:.6rem .7rem;font-weight:600}
-.price{font-weight:700}
+.product img{width:100%;height:160px;object-fit:cover;display:block}
+
+.product-info{display:flex;padding:.6rem .7rem;font-weight:600;align-items:center}
+.product-info .name{
+flex:2;
+white-space:nowrap;
+overflow:hidden;
+text-overflow:ellipsis;
+}
+.product-info .price{
+flex:1;
+text-align:right;
+font-weight:700;
+}
 
 #addBtn{position:fixed;bottom:20px;right:20px;background:#ffcc00;border:none;width:55px;height:55px;border-radius:50%;font-size:26px;cursor:pointer;box-shadow:0 4px 10px rgba(0,0,0,.2)}
 
 .modal{display:none;position:fixed;inset:0;background:rgba(0,0,0,0.6);align-items:center;justify-content:center;z-index:50}
-.modal-content{background:#fff;padding:1rem;border-radius:12px;width:100%;max-width:420px}
+.modal-content{background:#fff;padding:1rem;border-radius:12px;width:100%;max-width:420px;max-height:90vh;overflow:auto}
 .modal-content img{width:100%;height:220px;object-fit:cover;border-radius:10px;margin-bottom:10px}
-input{width:100%;padding:.45rem;margin:.4rem 0;border:1px solid #ccc;border-radius:6px;box-sizing:border-box}
+
+.field{position:relative;margin:.5rem 0}
+.field input{
+width:100%;
+padding:.6rem .8rem;
+padding-right:70px;
+border:1px solid #ccc;
+border-radius:6px;
+box-sizing:border-box;
+}
+.field span{
+position:absolute;
+right:10px;
+top:50%;
+transform:translateY(-50%);
+font-size:13px;
+color:#777;
+pointer-events:none;
+}
 
 button{padding:.5rem .8rem;border:none;border-radius:8px;cursor:pointer}
-.update-btn{background:#007bff;color:#fff}
 .save-btn{background:#28a745;color:#fff}
-.close-btn{background:#ccc}
+.update-btn{background:#007bff;color:#fff}
 </style>
 </head>
 <body>
@@ -50,27 +77,53 @@ button{padding:.5rem .8rem;border:none;border-radius:8px;cursor:pointer}
 
 <div id="modal" class="modal">
 <div class="modal-content">
+
 <h3 id="modalTitle"></h3>
 <img id="previewImg" style="display:none;">
 <input type="hidden" id="editId">
 
-<input type="text" id="name" placeholder="Product Name">
-<input type="text" id="description" placeholder="Description">
-<input type="number" id="buyPrice" placeholder="Buy Price">
-<input type="number" id="sellPrice" placeholder="Sell Price">
-<input type="number" id="stock" placeholder="Stock">
+<div class="field">
+<input type="text" id="name">
+<span>الاسم</span>
+</div>
+
+<div class="field">
+<input type="text" id="description">
+<span>الوصف</span>
+</div>
+
+<div class="field">
+<input type="number" id="buyPrice">
+<span>سعر الشراء</span>
+</div>
+
+<div class="field">
+<input type="number" id="sellPrice">
+<span>سعر البيع</span>
+</div>
+
+<div class="field">
+<input type="number" id="bulkPrice">
+<span>سعر الجملة</span>
+</div>
+
+<div class="field">
+<input type="number" id="stock">
+<span>المخزون</span>
+</div>
+
 <input type="file" id="image">
 
-<div style="display:flex;gap:.5rem;margin-top:.6rem;">
+<div style="margin-top:.7rem;">
 <button id="saveBtn" class="save-btn">Save</button>
-<button class="close-btn" onclick="closeModal()">Close</button>
 </div>
+
 </div>
 </div>
 
 <script>
 let db;
-const request=indexedDB.open("ProductManagerDB",2);
+const request=indexedDB.open("ProductManagerDB",3);
 
 request.onupgradeneeded=e=>{
 db=e.target.result;
@@ -91,6 +144,7 @@ function renderProducts(filter=""){
 const tx=db.transaction("products","readonly");
 const store=tx.objectStore("products");
 const req=store.getAll();
+
 req.onsuccess=()=>{
 const list=document.getElementById("productList");
 list.innerHTML="";
@@ -104,7 +158,7 @@ card.className="product";
 card.innerHTML=`
 <img src="${p.image||''}">
 <div class="product-info">
-<span>${p.name}</span>
+<span class="name">${p.name}</span>
 <span class="price">${formatSmartPrice(p.sellPrice)}</span>
 </div>`;
 
@@ -137,19 +191,21 @@ document.getElementById("name").value=p.name||"";
 document.getElementById("description").value=p.description||"";
 document.getElementById("buyPrice").value=p.buyPrice||"";
 document.getElementById("sellPrice").value=p.sellPrice||"";
+document.getElementById("bulkPrice").value=p.bulkPrice||"";
 document.getElementById("stock").value=p.stock||"";
+
 if(p.image){
 document.getElementById("previewImg").src=p.image;
 document.getElementById("previewImg").style.display="block";
 }else{
 document.getElementById("previewImg").style.display="none";
 }
+
 document.getElementById("modal").style.display="flex";
 }
 
 function closeModal(){
 document.getElementById("modal").style.display="none";
-document.getElementById("editId").value="";
 }
 
 document.getElementById("addBtn").onclick=()=>{
@@ -167,6 +223,7 @@ name:document.getElementById("name").value,
 description:document.getElementById("description").value,
 buyPrice:parseFloat(document.getElementById("buyPrice").value)||0,
 sellPrice:parseFloat(document.getElementById("sellPrice").value)||0,
+bulkPrice:parseFloat(document.getElementById("bulkPrice").value)||0,
 stock:parseInt(document.getElementById("stock").value)||0
 };
 
